--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,19 @@
             "php-http/discovery": true
         }
     },
+    "scripts": {
+
+        "post-autoload-dump": [
+
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+
+            "@php artisan package:discover --ansi",
+
+            "@php artisan vendor:publish --force --tag=livewire:assets --ansi"
+
+        ]
+
+    },
     "minimum-stability": "stable",
     "prefer-stable": true
 }
